--- a/index.html
+++ b/index.html
@@ -19,21 +19,34 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-
+		
+		
+		<div class="container" style="width:100%; position:relative; overflow:hidden; height:auto;">
+			<img id="post" src="../images/ddd2.jpg" style="width:140%; position:relative; left:-20%;">
+		</div>
+		
+		<div style="height:200px; overflow:hidden;">
+			<p id="doSupport">Event Supported: </p>
+			<p id="doTiltLR">Tilt Left/Right [gamma]: </p>
+			<p id="doTiltFB">Tilt Front/Back [beta]: </p>
+			<p id="doDirection">Direction [alpha]: </p>
+		</div>
+	
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
+        <!-- Google Analytics -->
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-45288619-3', 'paperli.github.io');
+		  ga('send', 'pageview');
+
+		</script>
     </body>
 </html>
