--- a/index.html
+++ b/index.html
@@ -21,17 +21,30 @@
         <!-- Add your site or application content here -->
 		
 		
-		<div class="container" style="width:100%; position:relative; overflow:hidden; height:auto;">
-			<img id="post" src="../images/ddd2.jpg" style="width:140%; position:relative; left:-20%;">
+		<div id="navbar">
+			THIS IS NAVBAR
 		</div>
 		
-		<div style="height:200px; overflow:hidden;">
-			<p id="doSupport">Event Supported: </p>
-			<p id="doTiltLR">Tilt Left/Right [gamma]: </p>
-			<p id="doTiltFB">Tilt Front/Back [beta]: </p>
-			<p id="doDirection">Direction [alpha]: </p>
+		<div id="about_box">
+			THIS IS ABOUT BOX
 		</div>
-	
+		
+		<div id="floor1_box" class="case_box">
+			THIS IS FLOOR 1
+		</div>
+		
+		<div id="floor2_box" class="case_box">
+			THIS IS FLOOR 2
+		</div>
+		
+		<div id="floor3_box" class="case_box">
+			THIS IS FLOOR 3
+		</div>
+		
+		<div id="floor4_box" class="case_box">
+			THIS IS FLOOR 4
+		</div>
+		
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
