Refine showing detail action

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 		<div id="floor1_box" class="case_box">
 			<div class='pics_box'></div>
 			<div class='case_description_box'>
-				<h1>Qute</h1>
-				<h4>Qute is the beautiful QR code scanner with social factor.</h4>
+				<h1 style='top:0px; position:absolute;'>Qute</h1>
+				<h4 style='top:20px; position:absolute;'>Qute is the beautiful QR code scanner with social factor.</h4>
 			</div>
 		</div>
 		
