--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.7.1.min.js"></script>
+        <script type="text/javascript" src="js/vendor/modernizr-2.7.1.min.js"></script>
+		
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -30,7 +31,12 @@
 		</div>
 		
 		<div id="floor1_box" class="case_box">
-			<div class='pics_box'></div>
+			<div class='pics_box'>
+				<!-- Use comment out  -->
+				<img src='../images/ddd1.jpg' ><!--
+				--><img src='../images/ddd2.jpg' ><!--
+				--><img src='../images/ddd3.jpg' >
+			</div>
 			<div class='case_description_box'>
 				<h1 style='top:0px; position:absolute;'>Qute</h1>
 				<h4 style='top:20px; position:absolute;'>Qute is the beautiful QR code scanner with social factor.</h4>
@@ -61,9 +67,9 @@
 		
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
+        <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
+		<script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-
         <!-- Google Analytics -->
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
