Add template script(init)

--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
 			THIS IS ABOUT BOX
 		</div>
 		
+		<script type="text/html" id="template">
+		<div class="case_whole_box">
+			<div class="case_box">
+				<div class='pics_box'>
+				</div>
+					<div class='case_description_box'>
+						
+					</div>
+				</div>
+		
+				<div class="detail_box">
+					<div class="shadow"> </div>
+					<a href="#" class="close_button"> </a>
+					<div class="detail_text"></div>
+					<a href="#" class="close_button"> </a>
+				</div>
+			</div>
+		</script>
 		
 		<div class="case_whole_box">
 			<div id="floor1_box" class="case_box">
