--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>paperworkStudio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
-
+		
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script type="text/javascript" src="js/vendor/modernizr-2.7.1.min.js"></script>
@@ -23,7 +23,7 @@
 		
 		
 		<div id="navbar">
-			<img src="../images/diwo.jpg" style="width:100%; height:auto;">
+			<img src="../images/s/diwo.jpg" style="width:100%; height:auto;">
 			<div>THIS IS NAVBAR</div>
 		</div>
 		
@@ -38,20 +38,22 @@
 				<div class='pics_box'>
 				</div>
 					<div class='case_description_box'>
-						
+						<h1 style='top:0px; position:absolute;' class="case-title" data-content="title"></h1>
+						<div style='top:20px; position:absolute; height:20px; overflow:hidden;' class="case-summary" data-content="article"></div>
 					</div>
 				</div>
 		
 				<div class="detail_box">
 					<div class="shadow"> </div>
 					<a href="#" class="close_button"> </a>
-					<div class="detail_text"></div>
+					<h1 style='top:0px; position:absolute;' class="detail-title" data-content="title"></h1>
+					<div class="detail-content" data-content="article"></div>
 					<a href="#" class="close_button"> </a>
 				</div>
 			</div>
 		</script>
 		
-		<div class="case_whole_box">
+		<div class="case_whole_box_ref">
 			<div id="floor1_box" class="case_box">
 				<div class='pics_box'>
 					<!-- Use comment out  -->
@@ -77,21 +79,12 @@
 				</div>
 			</div>
 			
-		<div id="floor2_box" class="case_box">
-			THIS IS FLOOR 2
-		</div>
 		
-		<div id="floor3_box" class="case_box">
-			THIS IS FLOOR 3
-		</div>
-		
-		<div id="floor4_box" class="case_box">
-			THIS IS FLOOR 4
-		</div>
 		
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
         <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
+		<script type="text/javascript" src="../src/jquery.loadTemplate-1.2.3.min.js"></script>
 		<script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
         <!-- Google Analytics -->
