Abount section (simple version)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,19 @@
 		
 		<div id="navbar">
 			<img src="../images/s/diwo.jpg" style="width:100%; height:auto;">
-			<div>THIS IS NAVBAR</div>
+			<div id="about_content">
+				<h1>Paper Lee</h1>
+				<div id="links">
+					<a id="cv" href="http://goo.gl/XMpWkX" alt="cv" title="cv" target="_blank"> </a>
+					<a id="mail" href="mailto:paper.li@gmail.com" alt="mail me" title="mail me" target="_blank"> </a>
+					<a id="twitter" href="https://twitter.com/@paperli" alt="@paperli" title="@paperli" target="_blank"> </a>
+					<a id="linkedin" href="http://www.linkedin.com/in/paperli" alt="linkedin" title="linkedin" target="_blank"> </a>
+					<a id="blog" href="http://paperli.blogspot.com/" alt="Paper's blog" title="Paper's blog" target="_blank"> </a>
+				</div>
+				<p>I do USER INTERFACE design</p>
+				<p>I love TECH ♥ ART</p>
+				<p>I write .HTML</p>
+			</div>
 		</div>
 		
 		<div id="about_box">
@@ -38,8 +50,8 @@
 				<div class='pics_box'>
 				</div>
 					<div class='case_description_box'>
-						<h1 style='top:0px; position:absolute;' class="case-title" data-content="title"></h1>
-						<div style='top:20px; position:absolute; height:20px; overflow:hidden;' class="case-summary" data-content="article"></div>
+						<h1 style='top:0px; position:absolute;' class="case_title" data-content="title"></h1>
+						<div class="case_summary" data-content="article"></div>
 					</div>
 				</div>
 		
@@ -52,34 +64,6 @@
 				</div>
 			</div>
 		</script>
-		
-		<div class="case_whole_box_ref">
-			<div id="floor1_box" class="case_box">
-				<div class='pics_box'>
-					<!-- Use comment out  -->
-					<img src='../images/ddd1.jpg' ><!--
-						--><img src='../images/ddd2.jpg' ><!--
-						--><img src='../images/ddd3.jpg' >
-					</div>
-					<div class='case_description_box'>
-						<h1 style='top:0px; position:absolute;'>Qute</h1>
-						<h4 style='top:20px; position:absolute;'>Qute is the beautiful QR code scanner with social factor.</h4>
-					</div>
-				</div>
-		
-				<div id ="floor1_detail_box" class="detail_box">
-					<div class="shadow"> </div>
-					<a href="#" class="close_button"> </a>
-					<p>Qute is not just the QR code scanner. It also brings the QR code online. People can share and read the comments about the QR code from the world.</p>
-
-					<p>The idea was from the scenarios from street. Image that you saw a QR code on the street. You realized it's shit only when you already visit through it. With Qute people can see the comments from the world about the QR code and you decide to continue or abort the visit.</p>
-
-					<p>Beyond that, Qute keeps the scan picture and displays it as part of result. Not only for the visual, but also for the memory. People may recall where the QR code is by the surrending of the QR code in the picture.</p>
-					<a href="#" class="close_button"> </a>
-				</div>
-			</div>
-			
-		
 		
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
