--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <title>paperworkStudio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+		
+		<link href='http://fonts.googleapis.com/css?family=Lobster|Open+Sans:400italic,400,300,600,700|Open+Sans+Condensed:300|Lobster+Two:400,700' rel='stylesheet' type='text/css'>
+		
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 		
         <link rel="stylesheet" href="css/normalize.css">
@@ -58,8 +60,8 @@
 				<div class="detail_box">
 					<div class="shadow"> </div>
 					<a href="#" class="close_button"> </a>
-					<h1 style='top:0px; position:absolute;' class="detail-title" data-content="title"></h1>
-					<div class="detail-content" data-content="article"></div>
+					<h1 class="detail_title" data-content="title"></h1>
+					<div class="detail_content" data-content="article"></div>
 					<a href="#" class="close_button"> </a>
 				</div>
 			</div>
