Fix android scroll problem

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 				<p>I do USER INTERFACE design</p>
 				<p>I love TECH ♥ ART</p>
 				<p>I write .HTML</p>
+				
 			</div>
 		</div>
 		
@@ -52,7 +53,7 @@
 				<div class='pics_box'>
 				</div>
 					<div class='case_description_box'>
-						<h1 style='top:0px; position:absolute;' class="case_title" data-content="title"></h1>
+						<h1 class="case_title" data-content="title"></h1>
 						<div class="case_summary" data-content="article"></div>
 					</div>
 				</div>
