Add back to desktop support

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<p>I do USER INTERFACE design</p>
 				<p>I love TECH ♥ ART</p>
 				<p>I write .HTML</p>
-				
+				<a href="//paperli.github.io/#redirected" id="desktop_web">Desktop</a>
 			</div>
 		</div>
 		
