Detail box color by case

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 		<link href='http://fonts.googleapis.com/css?family=Lobster|Open+Sans:400italic,400,300,600,700|Open+Sans+Condensed:300|Lobster+Two:400,700' rel='stylesheet' type='text/css'>
 		
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
+		<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+		<link rel="apple-touch-icon" href="apple-touch-icon.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="apple-touch-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="apple-touch-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="apple-touch-icon-152x152.png">
 		
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
